--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h2 class="title">How I incorporated JavaScript</h2>
       <p class="textbox">
         When you load my webpage, if you look closely you can see little pink circles floating up from the bottom. This was done with JavaScript and CSS! 
-        With the help of Google and what I learned through our assignments in Mindtap, I was able to create two functions that I inserted into my index.html with a script tag.
+        With the help of Google and what I learned through our assignments in Mindtap, I added two functions into my index.html with a script tag.
          The first function was for the creation of the “stars” where I used a ‘for’ loop and animation. The second function was a randomNumber function, so the little pink 
          “stars” would appear at random places and move at different random speeds. Then I added some CSS to give them shape and color. I still have a long way to go with fully
           understanding JavaScript, since I relied heavily on code that was already created, but it was really exciting to understand enough to get it to work on my page exactly as I imagined it would. 
