--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
     <div class="maindiv" id="about">
       <h2 class="title">Who is Riss?</h3>
-      <p class="textbox">An aspiring computer programmer currently living in Oregon with my partner and 4 fur-babies. For the last 5 years, I was employed in the pet
+      <p class="textbox">An aspiring web/UX designer currently living in Oregon with my partner and 4 fur-babies. Recently, I was employed in the pet
          industry as a dog bather and working towards becoming a professional groomer. Over time I realized that I no longer enjoyed dogs the way I did before they 
-         became my career focus, so I decided to change my career and pursue the path of programming. Always being very tech savvy and excellent with patterns and numbers, 
+         became my career focus, so I decided to change my career and pursue the path of design and programming. Always being very tech savvy and excellent with patterns and aesthetics, 
          it feels like the perfect fit. My time at GTCC has taught me many of the beginning skills I need to enter to the technology workforce, including HTML/CSS, 
          JavaScript, and PHP. I have also had the opportunity to hone previous design skills and can effortlessly use a many applications in the Adobe Suite. 
-         In my free time, I love to spend time with my partner, explore new nature spots, travel, and play video games. My interests include technology, self-care, 
-         nature, photography, listening to music, and space. </p>
+         In my free time, I love to spend time with my partner, drink coffee, travel to new places, and play video games. My interests include technology, watching cartoons, 
+         being in nature, listening to music/going to concerts, animals, and space. </p>
     </div>
 
     <div class="maindiv" id="html">
@@ -82,7 +82,7 @@
       <h2 class="title">How I incorporated JavaScript</h2>
       <p class="textbox">
         When you load my webpage, if you look closely you can see little pink circles floating up from the bottom. This was done with JavaScript and CSS! 
-        With the help of Google and what I learned through our assignments in Mindtap, I added two functions into my index.html with a script tag.
+        With the help of Google and what I learned through our assignments in Mindtap, I found two functions I was able to incorporate into my index.html with a script tag.
          The first function was for the creation of the “stars” where I used a ‘for’ loop and animation. The second function was a randomNumber function, so the little pink 
          “stars” would appear at random places and move at different random speeds. Then I added some CSS to give them shape and color. I still have a long way to go with fully
           understanding JavaScript, since I relied heavily on code that was already created, but it was really exciting to understand enough to get it to work on my page exactly as I imagined it would. 
