--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="#html">HTML</a>
       <a href="#css">CSS</a>
       <a href="#js">JavaScript</a>
-      <a href="resume.wright.internship.pdf">Resume</a>
+      <a href="wright.resume.internship.pdf">Resume</a>
     </nav>
 
   
